--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "jest": "^25.1.0"
+    "@types/jest": "^25.1.2",
+    "jest": "^25.1.0",
+    "rollup": "^1.31.0",
+    "rollup-plugin-postcss": "^2.0.6"
   }
 }
