--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "rollup-non-js-entry",
+  "name": "rollup-plugin-non-js-entry",
   "version": "0.0.1",
   "description": "Omits the js file of not js entry points.",
   "source": "src/index.js",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "babel src/index.js --out-file dist/index.js"
+    "build": "tsc"
   },
-  "author": "",
+  "author": "benada002",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
     "@types/jest": "^25.1.2",
     "jest": "^25.1.0",
     "rollup": "^1.31.0",
-    "rollup-plugin-postcss": "^2.0.6"
+    "rollup-plugin-postcss": "^2.0.6",
+    "ts-jest": "^25.2.0",
+    "typescript": "^3.7.5"
   }
 }
