--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src/**"
   },
   "author": "benada002",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^25.1.2",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
     "jest": "^25.1.0",
     "rollup": "^1.31.0",
     "rollup-plugin-postcss": "^2.0.6",
