--- a/.eslintrc
+++ b/.eslintrc
@@ -4,5 +4,9 @@
     ],
     "parserOptions": {
         "project": "./tsconfig.json"
+    },
+    "rules": {
+        "no-param-reassign": "off",
+        "consistent-return": "off"
     }
 }
